fix all apis role
